--- a/stylesheets/common/_modals.scss
+++ b/stylesheets/common/_modals.scss
@@ -63,4 +63,5 @@
 	iframe {
 		width: 100%;
 	}
+	overflow-y: auto;	
 }
